# MazeSolver

./: .gitignore  CMakeLists.txt
cmake/: config_validation.cmake  targets.cmake  workspace.cmake
cmake/templates/: launch.json.in
include/: known_maze.hpp  maze.hpp  micras.hpp  type.hpp
mazes/: samples.txt  test.txt  test2.txt  test3.txt
src/: known_maze.cpp  main.cpp  maze.cpp  micras.cpp  type.cpp
